--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/jhovannyvivas/platzi-avocados.git",
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
