--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "install:husky": "husky install"
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "husky": "7",
     "prettier": "^2.0.5",
     "pretty-quick": "^3.1.0",
